[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
skim = "0.10"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive"] }
shellexpand = "3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
